# WordsLearner

./: CMakeLists.txt  README.md
data/: dictionary.sqlite  status_bars.sqlite  style.qss
include/: ChooseTranslation.hpp  ChooseWord.hpp  DatabaseManager.hpp  DictionaryState.hpp  LetterButton.hpp  MainWinow.hpp  MakeWord.hpp  NonCopyable.hpp  ProgressBar.hpp  ProgressBarContainer.hpp  RainWord.hpp  Repetition.hpp  StatisticsWidget.hpp  TableButton.hpp  Training.hpp  Utility.hpp  WordsWelcome.hpp  WrapButton.hpp
src/: ChooseTranslation.cpp  ChooseWord.cpp  DatabaseManager.cpp  DictionaryState.cpp  LetterButton.cpp  Main.cpp  MainWindow.cpp  MakeWord.cpp  ProgressBar.cpp  ProgressBarContainer.cpp  RainWord.cpp  Repetition.cpp  StatisticsWidget.cpp  TableButton.cpp  Training.cpp  Utility.cpp  WordsWelcome.cpp  WrapButton.cpp
